--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^7.3.1",
+    "vite-plugin-compression": "^0.5.1",
     "vitest": "^4.0.18"
   },
   "lint-staged": {
