--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interview-test-server",
+  "name": "plusgrade-assessment",
   "private": true,
   "version": "0.0.0",
   "type": "module",
